# app/internal/models/getAllUsersRequest.model.go
@@ -1,6 +1,7 @@
 package models
 
 type GetAllItemsRequest struct {
-	Limit  int32 `query:"limit" json:"limit"`
-	Offset int32 `query:"offset" json:"offset"`
+	Limit          int32 `query:"limit" json:"limit"`
+	Offset         int32 `query:"offset" json:"offset"`
+	AscendingOrder bool  `query:"ascending_order" json:"ascending_order"`
 }
